--- a/debian/changelog
+++ b/debian/changelog
@@ -1,4 +1,4 @@
-balde (0.1.2-2~ppa1~utopic1) utopic; urgency=medium
+balde (0.1.2-2~ppa1~saucy1) saucy; urgency=medium
 
   [ Rafael Goncalves Martins ]
   * removed libbalde-template0 package
